# hotel-energy-audit

./: .aiignore  .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/calculation/: engine.py  types.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/reporting/: pdf_renderer.py
backend/app/repositories/: assumption_set_repository.py  audit_repository.py  bacs_repository.py  branding_repository.py  building_repository.py  calculation_repository.py  history_repository.py  project_repository.py  project_template_repository.py  reference_data_repository.py  report_repository.py  results_repository.py  scenario_repository.py  scenario_solution_repository.py  solution_catalog_repository.py  technical_system_repository.py  user_repository.py  wizard_step_payload_repository.py  zone_repository.py
backend/migrations/: README  env.py
backend/scripts/: db_cleanup.py  demo_seed_data.py  seed_all.py
backend/tests/: conftest.py  test_admin_api.py  test_api_hygiene.py  test_assumption_sets_api.py  test_assumptions_api.py  test_audit_api.py  test_auth_api.py  test_bacs_api.py  test_branding_api.py  test_buildings_api.py  test_calculation_engine.py  test_calculation_readiness_api.py  test_calculations_api.py  test_db_cleanup_script.py  test_db_metadata.py  test_exception_handlers.py  test_health.py  test_history_api.py  test_project_service.py  test_project_templates_api.py  test_projects_api.py  test_readiness_service.py  test_recette_smoke_api.py  test_reference_data_api.py  test_reports_api.py  test_results_api.py  test_scenario_scoring.py  test_scenarios_compare_api.py  test_scenarios_management_api.py  test_security_api.py  test_seed_all.py  test_solution_catalog_api.py  test_systems_api.py  test_wizard_api.py  test_zones_api.py
(+396 files in other folders)
