[project]
name = "hotel-energy-audit-api"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "alembic",
  "pydantic",
  "pydantic-settings",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "jinja2",
  "python-multipart"
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
