[project]
name = "hotel-energy-audit-backend"
version = "0.1.0"
description = "FastAPI backend for the hotel energy audit MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "email-validator",
  "fastapi",
  "pydantic-settings",
  "psycopg[binary]",
  "python-jose[cryptography]",
  "sqlalchemy",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
