[project]
name = "hotel-energy-audit-backend"
version = "0.1.0"
description = "FastAPI backend for the hotel energy audit MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "email-validator",
  "fastapi",
  "jinja2",
  "pydantic-settings",
  "psycopg[binary]",
  "python-multipart",
  "python-jose[cryptography]",
  "sqlalchemy",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"app/db/models/*.py" = ["F821"]
